Fixed navigation item styling issues related to the collapse and nav item height features. (#1261)
* Set height on the nav item so the style looks correct

* Adjust the size of the navbar icons for nav-display-density

--- a/src/extension/features/general/collapse-side-menu/index.css
+++ b/src/extension/features/general/collapse-side-menu/index.css
@@ -2,6 +2,11 @@
   cursor: pointer;
 }
 
+.ynabtk-collapse-link {
+  display: flex;
+  align-items: center;
+}
+
 .ynabtk-collapse-link > span {
   height: 2.25rem;
   display: flex;
@@ -44,5 +49,6 @@
 
 .nav-main > li > a {
   display: -webkit-box;
+  height: 3rem;
   width: 100%;
 }
